# openapi.yml
@@ -86,7 +86,7 @@ paths:
                   type: string
                 email:
                   type: string
-                phone-number:
+                phone_number:
                   type: string
       responses:
         '200':
@@ -97,5 +97,200 @@ paths:
           description: 'Unauthorized'
         '404':
           description: 'User not found'
+        '500':
+          description: 'Internal server error'
+  /task/create:
+    post:
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                deadline_date:
+                  type: string
+      responses:
+        '200':
+          description: 'Create task successful'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  task_id:
+                    type: integer
+        '400':
+          description: 'Request data is invalid'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User not found'
+        '500':
+          description: 'Internal server error'
+  /task/update:
+    put:
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: task_id
+          in: query
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                deadline_date:
+                  type: string
+                completion_status:
+                  type: string
+      responses:
+        '200':
+          description: 'Update task successful'
+        '400':
+          description: 'Request data is invalid'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User or task not found'
+        '500':
+          description: 'Internal server error'
+  /task/delete:
+    delete:
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: task_id
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'Delete task successful'
+        '400':
+          description: 'Request data is invalid'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User or task not found'
+        '500':
+          description: 'Internal server error'
+  /task/get:
+    get:
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: task_id
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'Get task successful'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  task_id:
+                    type: integer
+                  author_id:
+                    type: integer
+                  name:
+                    type: string
+                  description:
+                    type: string
+                  deadline_date:
+                    type: string
+                  creation_date:
+                    type: string
+                  completion_status:
+                    type: string
+        '400':
+          description: 'Request data is invalid'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User or task not found'
+        '500':
+          description: 'Internal server error'
+  /tasks/page:
+    get:
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: page_index
+          in: query
+          required: true
+          schema:
+            type: integer
+        - name: tasks_per_page
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'Get tasks page successful'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    task_id:
+                      type: integer
+                    author_id:
+                      type: integer
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    deadline_date:
+                      type: string
+                    creation_date:
+                      type: string
+                    completion_status:
+                      type: string
+        '400':
+          description: 'Request data is invalid'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'User or page not found'
         '500':
           description: 'Internal server error'
